--- a/SMS.Web/SMS.Web.csproj
+++ b/SMS.Web/SMS.Web.csproj
@@ -197,11 +197,15 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Areas\Dashboard\Controllers\ClassesController.cs" />
+    <Compile Include="Areas\Dashboard\Controllers\CoursesController.cs" />
     <Compile Include="Areas\Dashboard\Controllers\DashboardController.cs" />
     <Compile Include="Areas\Dashboard\Controllers\RolesController.cs" />
+    <Compile Include="Areas\Dashboard\Controllers\StudentsController.cs" />
     <Compile Include="Areas\Dashboard\Controllers\UsersController.cs" />
     <Compile Include="Areas\Dashboard\DashboardAreaRegistration.cs" />
     <Compile Include="Areas\Dashboard\ViewModels\RolesViewModels.cs" />
+    <Compile Include="Areas\Dashboard\ViewModels\StudentsViewModels.cs" />
     <Compile Include="Areas\Dashboard\ViewModels\UsersViewModels.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AJAXController.cs" />
@@ -234,23 +238,30 @@
     <Content Include="Areas\Dashboard\Content\img\user8-128x128.jpg" />
     <Content Include="Areas\Dashboard\Content\plugins\css\adminlte.min.css" />
     <Content Include="Areas\Dashboard\Content\plugins\css\all.min.css" />
+    <Content Include="Areas\Dashboard\Content\plugins\css\dataTables.bootstrap4.min.css" />
     <Content Include="Areas\Dashboard\Content\plugins\css\daterangepicker.css" />
     <Content Include="Areas\Dashboard\Content\plugins\css\icheck-bootstrap.min.css" />
     <Content Include="Areas\Dashboard\Content\plugins\css\jqvmap.min.css" />
+    <Content Include="Areas\Dashboard\Content\plugins\css\responsive.bootstrap4.css" />
+    <Content Include="Areas\Dashboard\Content\plugins\css\responsive.bootstrap4.min.css" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\adminlte.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\adminlte.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\bootstrap.bundle.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\Chart.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\dashboard.js" />
+    <Content Include="Areas\Dashboard\Content\plugins\Js\dataTables.bootstrap4.min.js" />
+    <Content Include="Areas\Dashboard\Content\plugins\Js\dataTables.responsive.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\daterangepicker.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\demo.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\jquery-ui.min.js" />
+    <Content Include="Areas\Dashboard\Content\plugins\Js\jquery.dataTables.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\jquery.knob.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\jquery.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\jquery.overlayScrollbars.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\jquery.vmap.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\jquery.vmap.usa.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\moment.min.js" />
+    <Content Include="Areas\Dashboard\Content\plugins\Js\responsive.bootstrap4.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\sparkline.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\summernote-bs4.min.js" />
     <Content Include="Areas\Dashboard\Content\plugins\Js\tempusdominus-bootstrap-4.min.js" />
@@ -298,6 +309,15 @@
     <Content Include="Areas\Dashboard\Views\Roles\_Listing.cshtml" />
     <Content Include="Areas\Dashboard\Views\Roles\_Action.cshtml" />
     <Content Include="Areas\Dashboard\Views\Roles\_Delete.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Students\Index.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Courses\Index.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Courses\_Listing.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Courses\_Action.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Courses\_Delete.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Classes\Index.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Classes\_Listing.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Classes\_Action.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Classes\_Delete.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
