--- a/SMS.Entities/SMS.Entities.csproj
+++ b/SMS.Entities/SMS.Entities.csproj
@@ -62,10 +62,13 @@
   <ItemGroup>
     <Compile Include="City.cs" />
     <Compile Include="Country.cs" />
+    <Compile Include="Class.cs" />
+    <Compile Include="Course.cs" />
     <Compile Include="Image.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMSUser.cs" />
     <Compile Include="State.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
