--- a/SMS.Services/SMS.Services.csproj
+++ b/SMS.Services/SMS.Services.csproj
@@ -88,6 +88,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassService.cs" />
+    <Compile Include="CourseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SMSRoleManager.cs" />
     <Compile Include="SMSSignInManager.cs" />
