--- a/SMS.Web/SMS.Web.csproj
+++ b/SMS.Web/SMS.Web.csproj
@@ -278,6 +278,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\profile.jpg" />
+    <Content Include="images\Stpics.png" />
+    <Content Include="images\student_blank.png" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -323,6 +326,7 @@
     <Content Include="Areas\Dashboard\Views\Subjects\_Listing.cshtml" />
     <Content Include="Areas\Dashboard\Views\Subjects\_Delete.cshtml" />
     <Content Include="Areas\Dashboard\Views\Subjects\_Action.cshtml" />
+    <Content Include="Areas\Dashboard\Views\Students\Registration.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
